2002-06-02  Ross Burton  <ross@burtonini.com>

	* graphics.c: Use the application pixmap path instead of the
	system path, so pixmaps loads if installed in a different prefix
	to libgnome.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* menu.c: (about_cb): remove separator in help menu, add icon in the
	about box

2002-05-10  Dave Neary  <bolsh@gimp.org>

	* Makefile.am:
	* game.c:
	* gameconfig.c:
	* gnobots.c:
	* graphics.c:
	* menu.c:
	* properties.c:
	* statusbar.c: Ported gnobots2 to gnome2, and got it
	compiling with -D*_DISABLE_DEPRECATED. Left to do: Change
	all dialogs to "action word" usable stuff. Enable Keynav.
	Handle changes in properties using gconf.

2002-05-05  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnobots2-C.omf : updated for new format of SK 0.3.8.
	* help/C/Makefile.am : updated for new format of SK 0.3.8.
	
2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnobots.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnobots2.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnobots2.xml : move to XML.

	* help/C/gnobots2-C.omf : move to XML.

	* help/C/gnobots2.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.
	
2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* menu.c (about_cb): Don't try to translate empty string.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnobots2.desktop:

	Install into the proper location and add a Categories
	field.
	
2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnobots2.desktop: Added traditional Chinese translation.

2001-07-12  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* Makefile.am: Don't create a `echo' file.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnobots.c
	* graphics.c: Vaya con dios imlib.
